--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -12,7 +12,7 @@
     {% if form.errors %}
         <p>Your username and password did not match. Try again.</p>
         {% else %}
-        <p>Please use the following form to log in</p>
+        <p>Please use the following form to log-in. If you don't have an account, <a href="{% url 'register'%}">register here</a>.</p>
     {% endif %}
 
     <form action="{% url 'login'%}" method="post">
