Sign in with google added

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -43,8 +43,8 @@
     </div>
     {% if messages %}
         <ul class="messages">
-             {% for message in messages %}
-                <li class="{{messages.tags}}">
+            {% for message in messages %}
+                <li class="{{message.tags}}">
                     {{message|safe}}
                     <a href="#" class="close">X</a>
                 </li>
