--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -23,4 +23,16 @@
     </form>
     <p><a href="{% url 'password_reset'%}">Forgot password?</a></p>
 
+    <!-- <h1>Hello</h1> -->
+    <div class="social">
+        <ul>
+            <li class="facebook">
+                <a href='{% url "social:begin" "facebook" %}'>Sign in with Facebook</a>
+            </li>
+            <li class="google">
+                <a href='{% url "social:begin" "google-oauth2" %}'>Sign in with Google</a>
+            </li>
+        </ul>
+    </div>
+
 {% endblock content %}
