--- a/account/templates/registration/logged_out.html
+++ b/account/templates/registration/logged_out.html
@@ -10,6 +10,7 @@
     <h1>Logged Out</h1>
     <p>
         You have been successfully logged out.
-        You can <a href="{% url 'login' %}">login again.</a>
+        You can <a href="{% url 'login' %}">login again</a>
+        or <a href="{% url 'register' %}">register</a>
     </p>
 {% endblock content %}
