--- a/images/templates/images/image/detail.html
+++ b/images/templates/images/image/detail.html
@@ -8,7 +8,10 @@
 
 {% block content %}
     <h1>{{image.title}}</h1>
-    <img src="{{image.image.url}}" alt="" class="image-detail">
+    {% load thumbnail %}
+    <a href="{{image.image.url}}">
+        <img src="{% thumbnail image.image 300x0 %}" alt="" class="image-detail">
+    </a>
     {% with total_likes=image.users_like.count  %}
         <div class="image-info">
             <div><span class="count">
