--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -1,80 +1,74 @@
 {% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href='{% static "css/base.css" %}'>
-    <title>
-        {% block title %}{% endblock title %}
-    </title>
+  <title>{% block title %}{% endblock %}</title>
+  <link href="{% static 'css/base.css' %}" rel="stylesheet">
 </head>
 <body>
-    <div id="header">
-
-
-        <span class="logo">Bookmarks</span>
-        {% if request.user.is_authenticated %}
-            <ul class="menu">
-                <li {% if section == 'dashboard' %}class="selected" {% endif %}>
-                    <a href="{% url 'dashboard'%}">My Dashboard</a>
-                </li>
-                <li {% if section == 'images' %}class="selected" {% endif %}>
-                    <a href="#">Images</a>
-                </li>
-                <li {% if section == 'people' %}class="selected" {% endif %}>
-                    <a href="#">People</a>
-                </li>
-            </ul>
-        {% endif %}
-
-
-        <span class="user">
-            {% if request.user.is_authenticated %}
-                Hello {{request.user.first_name}}
-                <a href="{% url 'logout'%}">Logout</a>
-                <a href="{% url 'edit'%}">Edit Profile</a>
-            {% else %}
-                <a href="{% url 'login'%}">Log-in</a>
-            {% endif %}
-        </span>
-    </div>
-    {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li class="{{message.tags}}">
-                    {{message|safe}}
-                    <a href="#" class="close">X</a>
-                </li>
-            {% endfor %}
-        </ul>
+  <div id="header">
+    <span class="logo">Bookmarks</span>
+    {% if request.user.is_authenticated %}
+    <ul class="menu">
+      <li {% if section == "dashboard" %}class="selected"{% endif %}>
+        <a href="{% url 'dashboard' %}">My dashboard</a>
+      </li>
+      <li {% if section == "images" %}class="selected"{% endif %}>
+        <a href="{% url 'images:list' %}">Images</a>
+      </li>
+      <li {% if section == "people" %}class="selected"{% endif %}>
+        <a href="#">People</a>
+      </li>
+    </ul>
+  {% endif %}
+  <span class="user">
+    {% if request.user.is_authenticated %}
+      Hello {{ request.user.first_name }},
+      <a href="{% url "logout" %}">Logout</a>
+    {% else %}
+      <a href="{% url "login" %}">Log-in</a>
     {% endif %}
-    <div id="content">
-        {% block content %}
+  </span>
+  </div>
 
-        {% endblock content %}
-    </div>
+  {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+        <li class="{{ message.tags }}">
+          {{ message|safe }}
+            <a href="#" class="close">x</a>
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdeliver.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
-    <script>
-        var csrftoken = Cookies.get('csrftoken')
-        function csrfSafeMethod(method){
-            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method))
+  <div id="content">
+    {% block content %}
+    {% endblock %}
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
+  <script>
+    var csrftoken = Cookies.get('csrftoken');
+    function csrfSafeMethod(method) {
+      // these HTTP methods do not require CSRF protection
+      return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+    $.ajaxSetup({
+      beforeSend: function(xhr, settings) {
+        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+          xhr.setRequestHeader("X-CSRFToken", csrftoken);
         }
-        $.ajaxSetup({
-            beforeSend: function(xhr, settings){
-                if (!csrfSafeMethod(settings.type) && !this.crossDomain){
-                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                }
-            }
-        })
-        $(document).ready(function(){
-            {% block domready %}
-            {% endblock %}
-        });
-    </script>
+      }
+    });
+
+    $(document).ready(function(){
+      {% block domready %}
+      {% endblock %}
+    });
+  </script>
+
 </body>
 </html>
